# benchmark-fastapi-django

./: .gitignore  README.md
django-poc/: .env.template  pyproject.toml
django-poc/django_poc/: asgi.py  settings.py  urls.py  wsgi.py
django-poc/django_poc/app/: apps.py  models.py  serializers.py  urls.py  views.py
django-poc/django_poc/app/migrations/: 0001_initial.py
fastapi-poc/: .env.template  pyproject.toml
fastapi-poc/fastapi_poc/: app.py  config.py  db.py  schemas.py
performance-tests/: locustfile.py  pyproject.toml
