[tool.poetry]
name = "fastapi-poc"
version = "0.1.0"
description = ""
authors = ["Patrick Rodrigues <patrick.pwall@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_poc"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
psycopg = "^3.1.3"
psycopg-pool = "^3.1.2"
orjson = "^3.8.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
