[tool.poetry]
name = "performance-tests"
version = "0.1.0"
description = ""
authors = ["Patrick Rodrigues <patrick.pwall@gmail.com>"]
readme = "README.md"
packages = [{include = "performance_tests"}]

[tool.poetry.dependencies]
python = "^3.7"
locust = "^2.12.1"
faker = "^15.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
